--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,22 @@
-<h1>Posts</h1>
+<h1>Posts</h1>  
+<hr>
+<table class="table">
+    <thead>
+      <tr>
+        <th>Post id</th>
+        <th>Date</th>
+        <th>Last name</th>
+        <th>Rationale</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.id %></td>
+        <td><%= post.date %></td>
+        <td><%= post.user.last_name%></td>
+        <td><%= truncate(post.rationale)%></td>
+      </tr>   
+      <% end %>
+    </tbody>
+  </table>
