implemented edit and update functionality

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,10 +7,10 @@
         <th>Date</th>
         <th>Last name</th>
         <th>Rationale</th>
+        <th>Edit Entry</th>
       </tr>
     </thead>
     <tbody>
-   <%= render @posts %>
-     
+   <%= render @posts %>     
     </tbody>
   </table>
