added the ability to delete posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
         <th>Last name</th>
         <th>Rationale</th>
         <th>Edit Entry</th>
+        <th>Delete Entry</th>
       </tr>
     </thead>
     <tbody>
