--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -18,7 +18,7 @@
     <ul class="dropdown-menu">
 
       <li>
-        <%= link_to "Edit User Information", edit_user_registration_path %>
+        <%= link_to "TODO: ADMIN DASHBOARD", root_path %>
       </li>
       <li class="divider">
       </li>
