--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,15 @@
   <%= f.label :rationale,class:"col-sm-2 control-label" %>
   <%= f.text_area :rationale,class:'form-control'  %>
 </div>
+
+<div class='form-group'>
+  <%= f.radio_button :status, 'submitted' %>
+  <%= f.label 'Submitted' %>
+  <%= f.radio_button  :status, 'approved' %>
+  <%= f.label 'Approved' %>
+  <%= f.radio_button :status, 'rejected' %>
+  <%= f.label  'Rejected' %>
+</div>
 <div class='form-group'>
   <%= f.submit 'Save',class:'btn btn-primary btn-block' %>
 </div>
