--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,29 +1,20 @@
-
-
 <%= form_for @post, class: "form-horizontal" do |f| %>
   <% if @post.errors.any? %>
-    <% @post.errors.full_messages.each do |error| %>
-      <%= js add_gritter(error, title: "Overtime App Notification",sticky: false)%>
-    <% end %>
+  <% @post.errors.full_messages.each do |error| %>
+  <%= js add_gritter(error, title: "Overtime App Notification",sticky: false)%>
+  <% end %>
   <% end  %>
-<div class='form-group'>
-  <%= f.label :date,class:"col-sm-2 control-label" %>
-  <%= f.date_field :date, class:'form-control' %>
-</div>
-<div class='form-group'>
-  <%= f.label :rationale,class:"col-sm-2 control-label" %>
-  <%= f.text_area :rationale,class:'form-control'  %>
-</div>
+  <div class='form-group'>
+    <%= f.label :date,class:"col-sm-2 control-label" %>
+    <%= f.date_field :date, class:'form-control' %>
+  </div>
+  <div class='form-group'>
+    <%= f.label :rationale,class:"col-sm-2 control-label" %>
+    <%= f.text_area :rationale,class:'form-control'  %>
+  </div>
 
-<div class='form-group'>
-  <%= f.radio_button :status, 'submitted' %>
-  <%= f.label 'Submitted' %>
-  <%= f.radio_button  :status, 'approved' %>
-  <%= f.label 'Approved' %>
-  <%= f.radio_button :status, 'rejected' %>
-  <%= f.label  'Rejected' %>
-</div>
-<div class='form-group'>
-  <%= f.submit 'Save',class:'btn btn-primary btn-block' %>
-</div>
+  <%= render partial: 'status', locals: {f: f} if current_user.type == "AdminUser"%>
+  <div class='form-group'>
+    <%= f.submit 'Save',class:'btn btn-primary btn-block' %>
+  </div>
 <% end %>
