--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class='logo'>
   <h1>Time Tracker</h1> 
 </div>
-
+<% if current_user %>
 <ul class="custom-nav nav nav-tabs">
   <li class= "<%= active(root_path) %>" >
     <%= link_to "Home", root_path %>
@@ -16,15 +16,17 @@
   <li class="dropdown pull-right">
     <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
-
+    <% if current_user.type == "AdminUser" %>
       <li>
-        <%= link_to "TODO: ADMIN DASHBOARD", root_path %>
-      </li>
-      <li class="divider">
-      </li>
+        <%= link_to "ADMIN DASHBOARD", admin_root_path %>
+      </li>     
+      <li class="divider"></li>
+    <% end %>
+      
       <li>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
       </li>
     </ul>
   </li>
 </ul>
+<% end %>
