--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
         <th>Date</th>
         <th>Last name</th>
         <th>Rationale</th>
+        <th>Status</th>
         <th>Edit Entry</th>
         <th>Delete Entry</th>
       </tr>
