--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,9 +1,10 @@
 <tr>
   <td><%= post.id %></td>
+  <td><%= post.overtime_request %></td>
   <td><%= post.date.strftime("%m/%d/%Y") %></td>
   <td><%= post.user.full_name%></td>
-  <td><%= truncate(post.rationale)%></td>
+  <td><%= link_to truncate(post.rationale), post_path(post) %></td>
   <td><%= status_label post.status %></td>
-  <td><%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" if policy(post).update? %></td>
-  <td><%= link_to 'Delete', post_path(post),method: :delete,id: "delete_post_#{post.id}" %></td>
+  <td><%= link_to '', edit_post_path(post), id: "edit_#{post.id}", class: 'glyphicon glyphicon-pencil index-icons'if policy(post).update? %></td>
+  <td><%= link_to '', post_path(post),method: :delete,class: 'glyphicon glyphicon-trash index-icons',id: "delete_post_#{post.id}" %></td>
 </tr>   
