--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
     <thead>
       <tr>
         <th>Post id</th>
+        <th>Overtime Request</th>
         <th>Date</th>
         <th>Last name</th>
         <th>Rationale</th>
