--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,17 @@
-<h1>Post</h1>
 <div>
-  <p><%= @post.date %></p>
+  <h2><%= @post.rationale %></h2>
+</div>
+<div class='well'>
+  <div>
+    <h3><span>User: </span><%= @post.user.full_name%></h3>
+  </div>
+  <div>
+    <h3><span>Date: </span><%= @post.date %></h3>
+  </div>
+  <div>
+    <h3><span>Current Status: </span><%= @post.status %></h3>
+  </div>
 </div>
 <div>
-  <p><%= @post.rationale%></p>
+  <%= link_to 'Edit',edit_post_path(@post),class: 'btn btn-primary' if policy(@post).update? %>
 </div>
