--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -1,4 +1,28 @@
-<% @audit_logs.each do |audit_log| %>
-<%= audit_log.user.full_name %><br>
+<h1>Audit Log Dashboard</h1>
 
-<% end %>
+<table class="table table-striped table-hover">
+	<thead>
+		<tr>
+			<th>
+				#
+			</th>
+			<th>
+				Employee
+			</th>
+			<th>
+				Week Starting
+			</th>
+			<th>
+				Confirmed At
+			</th>
+			<th>
+				Status
+			</th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		<%= render @audit_logs %>
+	</tbody>
+</table>
